veil-tests/src/compile_tests/fail/pii_inner_flags.rs
fn main() {}

#[derive(veil::Pii)]
struct Foo {
    #[redact(partial)]
    bar: String
}
